@@ -39,7 +39,7 @@
    "provides" : {
       "Math::GSL" : {
          "file" : "lib/Math/GSL.pm",
-         "version" : "0.30"
+         "version" : "0.31"
       },
       "Math::GSL::BLAS" : {
          "file" : "lib/Math/GSL/BLAS.pm",
@@ -1091,5 +1091,5 @@
          "url" : "http://github.com/leto/math--gsl/tree/master"
       }
    },
-   "version" : "0.30"
+   "version" : "0.31"
 }
