@@ -1,7 +1,9 @@
 =head1 Math::GSL Changes
 
-=head1 v0.30 - June 2014
+=head1 v0.31 - June 2014
+    - Fixed Matrix multiplication that was forcing square matrices.
 
+=head1 v0.30 - June 2014
     - Fixed generated C files with wrong GSL version numbers.
     - Refactored Build.PL in order to use either gsl-config or PkgConfig.
     - Change Build.PL to return 0 when GSL library not found.
@@ -12,7 +14,6 @@
 	- Fixed in the correct way the prove/TAP::Harness problem.
 
 =head1 v0.29 - June 2014
-
 	- Fix issue when prove/TAP::Harness uses lib/ modules instead of blib/ ones.
     - Add functions introduced in gsl 1.16.
     - Fix issue when compiling on some Linuxes.
